# SpliceVI-HDS

./: .gitignore  README.md  eval_splicevi.py  eval_splicevi.sh  pyproject.toml  requirements.txt  slurm_train_splicevi.sh  submit_train_jobs.sh  train_splicevi.py  train_splicevi.sh
docs/: AGE_DAYS_PIPELINE_UPDATE.md  DATA_SPLITTING.md  latent_mixers.md  splicevae_model.md
scripts/: build_splicevi_mudata.py  commands.sh  create_test_split.py  multinomial_resampling_masking.py  plot_eval_method_bars.py  run_custom_pipeline.sh  run_staged_eval.sh  test_mixers.py  validate_splicevi_mudata.py
src/splicevi/: __init__.py  eddisplice.py  splicevae.py  splicevi.py
tools/: data_navigator.py  test_data_navigator.py  walkthrough.md.resolved
